--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         DEV_PROJECT = "teemu-hemminki-books-dev"
         STAGE_PROJECT = "teemu-hemminki-books-stage"
         APP_GIT_URL = "https://github.com/TeemuHemminki/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.na45.prod.nextcle.com/repository/nodejs"
+        NEXUS_SERVER = "nexus-common.apps.na45.prod.nextcle.com"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
